adding in potion effects and death messages

--- a/src/main/resources/assets/temporalrelativity/lang/en_US.lang
+++ b/src/main/resources/assets/temporalrelativity/lang/en_US.lang
@@ -9,3 +9,6 @@ tile.temporalrelativity:temporalIronOre.name=Temporal Iron Ore
 
 #Entity localizations
 entity.temporalrelativity:TimeChicken.name=Time Chicken
+
+#Death Messages
+death.attack.temporalrelativity.oldAge=%s died from old age
